<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Race.RaceSecondActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/raceSecond_tv_Title"
        android:textAppearance="?attr/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/raceSecond_btn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:tint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/raceSecond_btn_Beacon"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="#E91E63"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/raceSecond_tv_Beacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_StartRace"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/raceSecond_recyclerview_Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceSecond_btn_Back">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/raceSecond_tv_Left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/raceSecond_tv_mid"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/raceSecond_tv_Right"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/raceSecond_recycleView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceSecond_recyclerview_Title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/raceSecond_textView_NotFound"
        android:text="@string/raceSecond_notification_NoData"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/noto_sans"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raceSecond_recyclerview_Title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/raceSecond_btn_Enter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/raceSecond_btn_Finish"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/raceSecond_btn_Next"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/raceSecond_btn_next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>