<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Group.GroupSecondActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/groupSecond_btn_Back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:tint="#7ea6e0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/noto_sans"
        android:text="@string/main_btn_Group"
        android:textAppearance="?attr/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.card.MaterialCardView
            android:background="@drawable/recyclerview_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/groupSecond_btn_BeaconOn"
                android:text="@string/default_Beacon_Open"
                android:textStyle="bold"
                android:textColor="#4CAF50"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:background="@drawable/recyclerview_background"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:background="@drawable/recyclerview_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/groupSecond_btn_BeaconOff"
                android:text="@string/default_Beacon_Close"
                android:textStyle="bold"
                android:textColor="#E91E63"
                android:background="@drawable/recyclerview_background"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupSecond_recyclerview_Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="125dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/groupSecond_recycleView_title_Left"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/noto_sans"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/recyclerview_background"
            android:gravity="center"
            android:text="@string/groupSecond_recycleView_title_Right"
            android:fontFamily="@font/noto_sans"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupSecond_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupSecond_recyclerview_Title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/groupSecond_textView_NotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/noto_sans"
        android:gravity="center_horizontal"
        android:text="@string/groupSecond_notification_NoData"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupSecond_recyclerview_Title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/groupSecond_btn_NextPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginBottom="30dp"
        android:text="@string/groupSecond_btn_NextPage"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>